test(unit-test): add typed behavior DSL
Replace comment-only Given-When-Then sections with an executable Kotlin chain that preserves typed fixtures and results, phase order, suspension, and original failures.

Keep reusable builds independent by consuming the DSL through a versioned coordinate and limiting source substitution to composition roots. The repository style gate now rejects legacy phase comments. Verified with the full root check, strict Dokka, documentation, catalog, version, and module-boundary checks.